fixed a few small overflow issues on the body and main of bio and res pages

--- a/global.css
+++ b/global.css
@@ -20,8 +20,8 @@
 body {
   font-family: "RocherColorGX", system-ui, "Segoe UI", "Open Sans",
     "Helvetica Neue", sans-serif;
-  min-height: 100vh;
-  overflow: hidden;
+  /* min-height: 100vh; */
+  /* overflow: hidden; */
   color: var(--font-fallback);
   font-weight: bold;
 }
